--- a/DirectoryFileBrowsing/Views/Home/Index.cshtml
+++ b/DirectoryFileBrowsing/Views/Home/Index.cshtml
@@ -1,24 +1,61 @@
-﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
+﻿@{
+    
+    ViewBag.Title = "Directory/File Browsing";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<div ng-controller="browserController">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3>File statistic</h3>
+        </div>
+        <div class="panel-body">
+            <table ng-hide="dir.Parent=='none'" class="table">
+                <thead>
+                    <tr>
+                        <td class="text-center">less 10 mb</td>
+                        <td class="text-center">10mb-50mb</td>
+                        <td class="text-center">more than 100 mb</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-hide="loading">
+                        <td class="text-center">{{stat.Less10Mb}}</td>
+                        <td class="text-center">{{stat.More10MbAndLess50Mb}}</td>
+                        <td class="text-center">{{stat.More100Mb}}</td>
+                    </tr>
+                </tbody>
+            </table>
+            <h2 ng-show="dir.Parent=='none'">Select disk, to continue!</h2>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <br />
+            <a ng-hide="dir.Parent=='none'" ng-click="getDir(dir.Parent)">
+                <span class="glyphicon glyphicon-arrow-up">
+                    {{dir.CurrentPath}}
+                </span>
+            </a>
+        </div>
+        <div class="panel-body">
+            <div ng-repeat="d in dir.Directorys">
+                <ng-switch on="d.Type">
+                    <a href="#" ng-switch-when="1" ng-click="getDir(d.Path)">
+                        <span class="glyphicon glyphicon-folder-close"></span>
+                        {{d.Path.substring(d.Path.lastIndexOf("\\")+1)}}
+                    </a>
+                    <a ng-switch-when="2">
+                        <span class="glyphicon glyphicon-file"></span>
+                        {{d.Path.substring(d.Path.lastIndexOf("\\")+1)}}
+                    </a>
+                    <a href="#" ng-switch-when="0" ng-click="getDir(d.Path)">
+                        <span class="glyphicon glyphicon-hdd"></span>
+                        {{d.Path}}
+                    </a>
+                </ng-switch>
+            </div>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
-    </div>
+
 </div>
